<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PaperInvest</string>
    <string name="action_settings">Configurações</string>
    
    <string name="log_in">Entrar</string>
    <string name="signup">Novo usuário</string>
    
    <string name="username_prompt">Usuário</string>
    <string name="password_prompt">Senha</string>
    <string name="confirm_password_prompt">Confirme sua senha:</string>
    
    <string name="error_prefix">"Por favor "</string>
    <string name="error_join">", e "</string>
    <string name="error_end">.</string>
    <string name="error_name">digite um usuário</string>
    <string name="error_password">digite uma senha</string>
    <string name="error_paper_code">Digite o código de um papel para buscar!</string>
    
    <string name="password_mismatch">digite a mesma senha duas vezes</string>
    
    <string name="save">Salvar</string>
    <string name="cancel">Cancelar</string>
    <string name="delete">Remover</string>
    
    <string name="action_new">Nova papel</string>
    <string name="action_sync">Sincronizar</string>
    <string name="action_logout">Sair</string>
    <string name="action_login">Entrar</string>
    
    <string name="login_title">Por favor, faça login ou se registre para sincronizar seus dados.</string>
    <string name="no_items">Está tão vazio aqui, selecione + para buscar papeis!</string>
    <string name="not_logged_in">Você não está logado</string>
    <string name="logged_in">Bem vindo %1$s !</string>
        
    <string name="search">Buscar</string>
       
    <string name="ticket_name">Papel</string>
    <string name="ticket_price">Valor</string>
    
    <string name="question_ticket_name">Digite o código de um papel</string>
    
    <string name="paper_code_text">Papel</string>
    <string name="paper_last_text">Último</string>
    <string name="paper_oscilation_text">Oscilação</string>
    
    <string name="selection_no_items">Não foi possível encontrar nenhum item. Tente novamente mais tarde.</string>
    
    <string name="paper_new_error">Não foi possível encontrar os dados</string>
    
    

</resources>
