<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <AutoCompleteTextView
        android:id="@+id/paper_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/question_ticket_name" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/deleteButton"
        android:layout_alignParentLeft="true"
        android:text="@string/save" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/delete"
        android:visibility="invisible" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/paper_text"
        android:layout_marginTop="15dp"
        android:onClick="onBtnSearchClick"
        android:text="@string/search" />

    <TextView
        android:id="@+id/paperCodeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/searchButton"
        android:layout_marginTop="30dp"
        android:text="@string/paper_code_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/paperCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/paperCodeName"
        android:layout_alignBottom="@+id/paperCodeName"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/paperlast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/paperlastName"
        android:layout_alignBottom="@+id/paperlastName"
        android:layout_alignLeft="@+id/paperCode"/>

    <TextView
        android:id="@+id/paperlastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/paperCodeName"
        android:layout_marginTop="20dp"
        android:text="@string/paper_last_text" />
    
    <TextView
        android:id="@+id/paperOscilation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/paperOscilationName"
        android:layout_alignBottom="@+id/paperOscilationName"
        android:layout_alignLeft="@+id/paperCode"/>

    <TextView
        android:id="@+id/paperOscilationName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/paperlastName"
        android:layout_marginTop="20dp"
        android:text="@string/paper_oscilation_text" />

    <TextView
        android:id="@+id/paperErrorCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/paper_text"
        android:layout_centerHorizontal="true"
        android:text="@string/error_paper_code"
        android:visibility="invisible" />

</RelativeLayout>